# oca2web

./: aplicacao.py  funcoes_pdf.py  pyproject.toml  render.yaml  requirements.txt  sistemaOca.py  sistemaOca.spec  vercel.json
myproject/frontend/: apps.py
myproject/myproject/: settings.py
