[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "Projeto Django para automação de certificados"
authors = ["Pietro <pietro.alvinos2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
